[package]
name = "typst-package-source"
version.workspace = true
description = "Explicit, policy-gated Typst package resolution: the Package Source seam, in-memory bundles, registries, and archives"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["typst", "typesetting", "packages", "registry", "wasm"]
categories = ["compilers", "wasm"]

[features]
default = []
serde = ["dep:serde"]
# Parse verbatim Typst Universe `.tar.gz` archives into Package Bundles (wasm-safe).
archive = ["dep:flate2", "dep:tar"]
# Serve unpacked packages from Typst CLI-style package directories (native).
fs-packages = ["dep:typst-kit", "dep:typst-library", "typst-kit/system-packages"]
# Download packages from a Typst Universe-style registry (native).
download = ["archive", "fs-packages", "typst-kit/universe-packages"]
# Built-in native HTTPS downloader from typst-kit.
system-downloader = ["download", "typst-kit/system-downloader"]
# Pre-download verbatim package archives for embedding (native).
vendor = ["download"]

[dependencies]
flate2 = { version = "1", optional = true }
serde = { workspace = true, optional = true }
tar = { version = "0.4", optional = true, default-features = false }
typst-kit = { workspace = true, optional = true }
typst-library = { workspace = true, optional = true }
typst-syntax.workspace = true

[dev-dependencies]
pollster.workspace = true
tempfile.workspace = true
